# TweetSentiments

./: .gitignore  pyproject.toml  requirements.txt
moviesense/: main.py  train_cbow.py  train_logisitic_regression.py  train_mlp.py  train_nn.py  train_rnn.py
moviesense/data/: cbow_dataset.py  dataset.py  datasets.py
moviesense/data/models/: le.pkl  vectorizer.pkl
moviesense/data/models/logistic_regression/: bias.npy  weights.npy
moviesense/models/: cbow.py  logistic_regression.py  mlp.py  old_cbow.py  rnn.py
moviesense/utils/: cbow_preprocess.py  data_preparation.py  plot_graphs.py  preprocess.py
moviesentiments/: main.py  train_cbow.py  train_logisitic_regression.py  train_mlp.py  train_nn.py
moviesentiments/data/: datasets.py
moviesentiments/data/models/logistic_regression/: bias.npy  weights.npy
moviesentiments/models/: cbow.py  logistic_regression.py  mlp.py  rnn.py
moviesentiments/utils/: cbow_preprocess.py  plot_graphs.py  preprocess.py
