[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MovieSentiments"
version = "1.0"
description = "A sentiment classifier for movie reviews."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.10"
authors = [
    { name = "Anjola Aina", email = "anjola.aina@gmail.com" }
]
homepage = "https://github.com/anj0la/AniSense"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/anj0la/MovieSense"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]